add HTML and CSS info - generics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 
 <body>
+    <header class="container my-5">
+        <div class="d-flex justify-content-between">
+            <h2>Decidi il grado di difficoltà: </h2>
+            <select name="difficulty" id="difficulty">
+                <option value="1">Difficoltà 1</option>
+                <option value="2">Difficoltà 2</option>
+                <option value="3">Difficoltà 3</option>
+            </select>
+        </div>
+    </header>
 
+    <main>
+        <div id="result"></div>
+    </main>
 
 
     <script src="js/script.js"></script>
