add logic behind function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <div id="result"></div>
+        <div id="result" class="d-flex flex-wrap"></div>
     </main>
 
 
