--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="d-flex justify-content-between">
             <h2>Decidi il grado di difficoltà: </h2>
             <select name="difficulty" id="difficulty">
+                <option value="null">---</option>
                 <option value="1">Difficoltà 1</option>
                 <option value="2">Difficoltà 2</option>
                 <option value="3">Difficoltà 3</option>
