--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                 <option value="3">Difficoltà 3</option>
             </select>
         </div>
+        <div class="d-flex justify-content-center">
+            <button id="button">GIOCA</button>
+        </div>
     </header>
 
     <main>
-        <div id="result" class="d-flex flex-wrap"></div>
+        <div id="result" class="container d-flex flex-wrap"></div>
     </main>
 
 
